--- a/templates/query-frontend/query-frontend-svc.yaml
+++ b/templates/query-frontend/query-frontend-svc.yaml
@@ -18,6 +18,10 @@ spec:
       protocol: TCP
       name: http-metrics
       targetPort: http-metrics
+    - port: {{ .Values.config.server.grpc_listen_port }}
+      protocol: TCP
+      name: grpc
+      targetPort: grpc
   selector:
     {{- include "cortex.queryFrontendSelectorLabels" . | nindent 4 }}
 {{- end -}}
