avoid scheduling queriers and ingesters on the same node
Avoids scheduling queriers and ingesters on the same node because they both share query workloads.

Signed-off-by: Tom Hayward <thayward@infoblox.com>

--- a/values.yaml
+++ b/values.yaml
@@ -479,6 +479,7 @@ ingester:
                   operator: In
                   values:
                     - ingester
+                    - querier
             topologyKey: 'kubernetes.io/hostname'
 
   annotations: {}
@@ -780,6 +781,7 @@ querier:
                 - key: app.kubernetes.io/component
                   operator: In
                   values:
+                    - ingester
                     - querier
             topologyKey: 'kubernetes.io/hostname'
 
