fix release workflow
Signed-off-by: Tom Hayward <thayward@infoblox.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -45,6 +45,7 @@ jobs:
 
       - name: Package Chart
         run: |
+          helm repo add bitnami https://charts.bitnami.com/bitnami
           helm dependency build
           helm package . -d docs
           helm repo index ./docs/ --url https://cortexproject.github.io/cortex-helm-chart
