Fix alertmanager URL template in ruler-dep.yaml
Use the same method as alertmanager-headless-service to generate hostname

Signed-off-by: Amirul Ali <amirul@rixv.net>

--- a/templates/ruler/ruler-dep.yaml
+++ b/templates/ruler/ruler-dep.yaml
@@ -107,7 +107,7 @@ spec:
             - "-config.file=/etc/cortex/cortex.yaml"
             {{- if not .Values.config.ruler.alertmanager_url }}
               {{- if .Values.config.ruler.enable_alertmanager_discovery }}
-            - "-ruler.alertmanager-url=http://_http-metrics._tcp.{{ template "cortex.name" . }}-alertmanager-headless.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}/api/prom/alertmanager/"
+            - "-ruler.alertmanager-url=http://_http-metrics._tcp.{{ template "cortex.alertmanagerFullname" . }}-headless.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}/api/prom/alertmanager/"
               {{- else }}
             - "-ruler.alertmanager-url=http://{{ template "cortex.alertmanagerFullname" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}:{{ .Values.config.server.http_listen_port }}/api/prom/alertmanager/"
               {{- end }}
